--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ chrono = { version = "0.4.38", features = ["serde"] }
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
-serde_with = "3.8.1"
+serde_with = { version = "3.8.1", features = ["chrono_0_4"] }
 thiserror = "1.0.61"
 tokio = { version = "1.37.0", features = ["full"] }
 
